# hf-model-inspector

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  action.yml  entrypoint.py  model_inspection_report.md  model_summary.md  pyproject.toml  requirements.txt  script.py  test_model_report.md
.github/workflows/: ci.yml  test-gh-action.yml  test-inspect.yml
examples/: test.py  test_model_report.md
src/: __init__.py  formatter.py  hf_model_inspector.py  loader.py  utils.py
src/hf_model_inspector/: __init__.py  analyzer.py  formatter.py  hf_model_inspector.py  loader.py  utils.py
test/integration/: test_hf_model_inspector_integration.py
tests/integration/: test_batch_processing_hf_model_inspector.py  test_hf_model_inspector_integration.py  test_invalid_model_hf_model_inspector_integration.py
tests/unit/: test_analyzer.py  test_hf_model_inspector.py  test_loader.py
